...
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp">

            <!-- Center Title -->
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Socially"
                android:textSize="20sp"
                android:textColor="@color/pink"
                android:textStyle="bold"
...
            android:src="@drawable/search"
            android:scaleType="centerInside"
            app:tint="@color/darkbrown"
            android:padding="10dp" />

        <ImageView
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/add"
...
