...
    <!-- Selected Image Preview -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ImageView
            android:id="@+id/selectedImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/profile7" />

        <!-- Bottom overlay buttons -->
...
